<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_base"
    tools:context=".EntryPointActivity">

    <!-- ヘッダー -->
    <jp.co.yumemi.android.code_check.molecules.SimpleToolbar
        android:id="@+id/page_search_header"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:title="@string/page_search_title" />


    <!-- 検索ボックス -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/page_search_box"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/page_search_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_search_header">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/page_search_box_layout"
            style="@style/PageSearch.Box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAutofill="no"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/darker_gray"
            app:hintTextColor="@android:color/darker_gray"
            app:startIconDrawable="@android:drawable/ic_menu_search"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/page_search_box_editor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/page_search_box_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </com.google.android.material.card.MaterialCardView>


    <!-- リスト表示 -->
    <jp.co.yumemi.android.code_check.organisms.repository_list_view.RepositoryListView
        android:id="@+id/page_search_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_search_box" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/page_search_list_empty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/app_base"
        android:gravity="center"
        android:text="@string/page_search_list_empty"
        android:textColor="@color/app_base_on"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/page_search_list"
        app:layout_constraintEnd_toEndOf="@id/page_search_list"
        app:layout_constraintStart_toStartOf="@id/page_search_list"
        app:layout_constraintTop_toTopOf="@id/page_search_list"
        tools:visibility="gone" />


    <!-- ローディング表示 -->
    <jp.co.yumemi.android.code_check.atoms.LoadingOverlay
        android:id="@+id/page_search_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/page_search_header"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>